# neural-networks-and-deep-learning

./: Pipfile  pyproject.toml
fig/: mnist.py
src/: mnist_loader.py  network.py  network3.py  run_network.py
