[tool.poetry]
name = "neural-networks-and-deep-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^2.7"
numpy = "^1.13.3"
scikit-learn = "^0.19.0"
scipy = "^0.19.1"
Theano = "^0.7.0"

[tool.poetry.dev-dependencies]
pylint = "^1.9.0"
ipython = "^5.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
