[tool.poetry]
name = "neural-networks-and-deep-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# numpy = "^1.13.3"
# scikit-learn = "^0.19.0"
# scipy = "^0.19.1"
# Theano = "^0.7.0"

numpy = "^1.13.1"
Theano = "^0.7.0"
[tool.poetry.dev-dependencies]
# pylint = "^1.9.0"
# ipython = "^5.10.0"

pylint = "^2.6.0"
ipython = "^7.19.0"
black = {version = "^20.8b1", allow-prereleases = true}
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
